# haskell-cpython

./: .travis.yml  CPython.chs  README.md  cpython.cabal  hscpython-shim.c  hscpython-shim.h  license.txt  stack.yaml
CPython/: ByteArray.chs  Bytes.chs  Complex.chs  Constants.chs  Dictionary.chs  Exception.chs  Float.chs  Integer.chs  Internal.chs  List.chs  Mapping.chs  Number.chs  Object.chs  Reflection.chs  Sequence.chs  System.chs  Tuple.chs  Type.chs  Types.hs  Unicode.chs
CPython/Protocols/: Mapping.chs  Number.chs  Object.chs  Sequence.chs
CPython/Types/: ByteArray.chs  Bytes.chs  Capsule.chs  Cell.chs  Code.chs  Complex.chs  Dictionary.chs  Exception.chs  Float.chs  Function.chs  InstanceMethod.chs  Integer.chs  Iterator.chs  List.chs  Method.chs  Module.chs  Set.chs  Slice.chs  Tuple.chs  Type.chs  Unicode.chs  WeakReference.chs
cbits/: hscpython-shim.c  hscpython-shim.h
lib/: CPython.chs
lib/CPython/: Constants.chs  Internal.chs  Reflection.chs  System.chs  Types.hs
lib/CPython/Protocols/: Iterator.chs  Mapping.chs  Number.chs  Object.chs  Sequence.chs
lib/CPython/Protocols/Object/: Enums.chs
lib/CPython/Types/: ByteArray.chs  Bytes.chs  Capsule.chs  Cell.chs  Code.chs  Complex.chs  Dictionary.chs  Exception.chs  Float.chs  Function.chs  InstanceMethod.chs  Integer.chs  Iterator.chs  List.chs  Method.chs  Module.chs  Set.chs  Slice.chs  Tuple.chs  Type.chs  Unicode.chs  WeakReference.chs
tests/: Tests.hs  haskell-cpython-tests.cabal
