name: cpython
version: 3.1.0
synopsis: Bindings for libpython
license: GPL
license-file: license.txt
author: John Millikin
maintainer: jmillikin@gmail.com
build-type: Simple
cabal-version: >=1.2
category: TODO

description:
  TODO

library
  ghc-options: -Wall
  build-depends:
      base >=4 && < 5
    , bytestring

  build-tools:
    c2hs >= 0.16

  exposed-modules:
    CPython
    CPython.Types.ByteArray
    CPython.Types.Bytes
    CPython.Types.Cell
    CPython.Types.Code
    CPython.Types.Complex
    CPython.Types.Dictionary
    CPython.Types.Float
    CPython.Types.Function
    CPython.Types.InstanceMethod
    CPython.Types.Integer
    CPython.Types.List
    CPython.Types.Method
    CPython.Types.Tuple
    CPython.Types.Type
    CPython.Types.Unicode
    CPython.Protocols.Mapping
    CPython.Protocols.Number
    CPython.Protocols.Object
    CPython.Protocols.Sequence
    CPython.Constants
    CPython.Exception
    CPython.Reflection
    CPython.System

  other-modules:
    CPython.Internal

  c-sources: hscpython-shim.c
  include-dirs: .

  pkgconfig-depends: python-3.1
